# answer-documentation-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.Docker.md  README.md  compose.yaml  pyproject.toml  requirements.txt
.claude/skills/firecrawl-skill/: SKILL.md
agent/: citations.py  graph.py  nodes.py  prompts.py  session.py  state.py  tools.py
api/: main.py  routes.py  schemas.py  security.py
core/: clients.py  config.py  logging.py
docs/prompts/: prompt1.md  prompt10.md  prompt11.md  prompt12.md  prompt13.md  prompt14.md  prompt15.md  prompt16.md  prompt17.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md  prompt6.md  prompt7.md  prompt8.md  prompt9.md
evaluation/: dataset.json  evaluators.py  results_raw.json  run_eval.py
ingestion/: chunker.py  crawler.py  embedder.py  pipeline.py
retrieval/: fusion.py  reranker.py  retriever.py  vector_store.py
scripts/: ingest.py  migrate_hybrid_search.sql  setup_supabase.sql
static/: index.html
tests/: conftest.py  test_api.py  test_chunker.py  test_citations.py  test_fusion.py  test_graph_logic.py  test_prompts.py  test_retriever.py  test_schemas.py  test_session.py
