[project]
name = "anthropic-rag-agent"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.40.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "voyageai>=0.3.0",
    "supabase>=2.0.0",
    "firecrawl-py>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "slowapi>=0.1.9",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ingestion", "retrieval", "agent", "api", "evaluation"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit live external services (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
